		subpopulations from files properly if they were precisely the
		right size.  Thanks to Doug <doug1@ten-13.org>
	Bugfix to documentation for Tutorial1, which was still using
		VectorSpecies instead of BitVectorSpecies.  Thanks to
		Fabian Kostadinov <fk@avaco.ch>
	Fixes to ThreadPool to make it serializable again (it got deserializable
		when we moved it into its own class in ec/util)
	Minor fixes to documentation.  Thanks to J. Alejandro Zepeda Cortes 
		<jalejandrozepedac@gmail.com>
	Fixed ThreadPool monitor state bug introduced when refactoring, oops
	Minor renaming in ThreadPool
	Added Exchanger.process(...) method to allow incoming individuals
		to be processed by the user in some custom fashion prior to being
		accepted into the population.
	All VectorIndividual subclasses now check to see if the individuals
		are the same length when doing crossover.  If not, a warning
		is issued and crossover is only done up to the minimum length
		in common.
	Added ec.breed.InitializationPipeline
	Removed old deprecated methods in Species
	Added ec/app/coevolve2/coevolve2.params (which was broken) and removed
		ec/app/coevolve2/ecsuite.params.  Thanks to David Pinheiro 
		<davidsantospinheiro@gmail.com>
	GEProblem can now handle either GPIndividuals or GEIndividuals. Yes,
		that's an exceptionally unusual and rare need.
	De-finalized methods in KozaFitness.  Thanks to Doug <doug1@ten-13.org>
	InterPopulationExchange now clones its migrants
	Tweaks to SteadyStateEvolutionState to properly print the last statistics
		information out for the final generation
	Removed a vestigial setup() call in VectorSpecies
	ListCrossoverPipeline handles 2-point crossover with more uniform choices
		of loci (using rejection sampling).
	GE now can handle wrapping of genomes when they produce oversize trees
	Fixed problem where GE mapping wasn't bothering to set the argposition or
		parent of the GPnodes.  This didn't cause problems unless we were
		doing strongly typed GP.